html tran to ejs

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,13 +1,14 @@
-            <nav class="navbar navbar-expand-lg navbar-light bg-primary ">
-                <a class="navbar-brand" href="#">Home</a>
+            <nav class="navbar navbar-expand-lg navbar-light bg-warning ">
+                <a class="navbar-brand" href="/">Home</a>
           
                 <div class="collapse navbar-collapse" >
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Urgent work</a>
+                      <a class="nav-link" href="/registeruser">Urgent work</a>
                     </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                   
+                    <!-- <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Job region
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -16,7 +17,7 @@
                         <a class="dropdown-item" href="#">Something else here</a>
                       </div></li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Resume
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -25,18 +26,16 @@
                           <a class="dropdown-item" href="#">Something else here</a>
                         </div></li>
                         
-                        
+                         -->
                         <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            login
-                          </a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                          <a class="nav-link dropdown-toggle" href=""  data-toggle="dropdown">login</a>
+                          <div class="dropdown-menu" >
+                            <a class="dropdown-item" href="/login">login</a>
+                            <a class="dropdown-item" href="/registeruser">registerUser</a>
+                            <a class="dropdown-item" href="/registercompany">registerCompany</a>
                           </div>
                         </li>
-                  </ul>
+                      </ul>
                 </div>
               </nav>
     
