--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registerUser</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -11,7 +11,7 @@
     <script src="js/bootstrap.min.js"></script> -->
 </head>
 <body>
-
+  <%- include('navbar') %>
      <!-- Name input -->
      <div class="form-outline mb-4">
         <label class="form-label" for="login-Name">name</label>
@@ -47,4 +47,5 @@
 
       
 </body>
+<%- include('Footer') %>
 </html>
