--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -1,7 +1,7 @@
   <!-- Footer -->
   <footer class="text-center text-lg-start bg-white text-muted bg-primary">
     <!-- Section: Social media -->
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom bg-dark">
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom bg-warning">
       <!-- Left -->
       <div class="me-5 d-none d-lg-block">
         <span>Get connected with us on social networks:</span>
