--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,42 +1,64 @@
-            <nav class="navbar navbar-expand-lg navbar-light bg-warning ">
-                <a class="navbar-brand" href="/">Home</a>
-          
+
+            <div class="pc">
+            <div class="language ">
+              
+              <ui>
+                <li>
+                <a href="" class="me-4 link-secondary">
+                  <!-- <i class="bi bi-facebook"></i> -->asadasdasd
+                </a>
+                <button class="btn btn-primary" type="button">TH</button>               
+                <button class="btn btn-danger" type="button">EN</button></li>
+                </ui>
+            </div>
+              <div class="login">
+              <ul class="navbar-nav" >
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle bg-light  "  data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">login</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                  </li>
+                
+            </ul>
+            </div>
+          </div>
+            
+            
+            
+            <nav class="navbar navbar-expand-md navbar-light bg-warning nav nav-pills">
+                
                 <div class="collapse navbar-collapse" >
-                  <ul class="navbar-nav">
+                  <ul class="navbar-nav flex-sm-fill bg-white">
+                    <li class="nav-item ">
+                      <a class="nav-link " href="/">Home</a>
+                    </li>
+                      </ul>
+                  <ul class="navbar-nav flex-sm-fill bg-primary">
                     <li class="nav-item">
                       <a class="nav-link" href="/registeruser">Urgent work</a>
                     </li>
-                   
-                    <!-- <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Job region
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                      </div></li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Resume
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <a class="dropdown-item" href="#">Action</a>
-                          <a class="dropdown-item" href="#">Another action</a>
-                          <a class="dropdown-item" href="#">Something else here</a>
-                        </div></li>
-                        
-                         -->
-                        <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href=""  data-toggle="dropdown">login</a>
-                          <div class="dropdown-menu" >
-                            <a class="dropdown-item" href="/login">login</a>
-                            <a class="dropdown-item" href="/registeruser">registerUser</a>
-                            <a class="dropdown-item" href="/registercompany">registerCompany</a>
-                          </div>
-                        </li>
                       </ul>
+
+                    
+                      <ul class="navbar-nav flex-sm-fill bg-white">
+                        <li class="nav-item">
+                          <a class="nav-link" href="/registercompany">region</a>
+                        </li>
+                          </ul>
+                          <ul class="navbar-nav flex-sm-fill bg-primary">
+                            <li class="nav-item">
+                              <a class="nav-link" href="/resume">resume</a>
+                            </li>
+                              </ul>
+                              <ul class="navbar-nav flex-sm-fill bg-white">
+                                <li class="nav-item">
+                                  <a class="nav-link" href="/payment">payment</a>
+                                </li>
+                                  </ul>        
                 </div>
-              </nav>
+              </nav> 
     
            
