--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -16,9 +16,9 @@
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle bg-light  "  data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">login</a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="/login">login</a></li>
+                    <li><a class="dropdown-item" href="/registeruser">registerUser</a></li>
+                    <li><a class="dropdown-item" href="/registercompany">registerCompany</a></li>
                   </ul>
                   </li>
                 
