update login not finish

--- a/views/hotjob.ejs
+++ b/views/hotjob.ejs
@@ -1,4 +1,4 @@
-<div class="container bg-light">
+<!-- <div class="container bg-light">
     <div class="row">
       <div class="col">
         <h2>Hot Job</h2>
@@ -38,4 +38,4 @@
     <img src="./image/AIS.png" class="img-fluid rounded-start" alt="...">
   </div>
   </div>
-  </div>
+  </div> -->
