--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -2,14 +2,7 @@
             <div class="pc">
             <div class="language ">
               
-              <ui>
-                <li>
-                <a href="" class="me-4 link-secondary">
-                  <!-- <i class="bi bi-facebook"></i> -->asadasdasd
-                </a>
-                <button class="btn btn-primary" type="button">TH</button>               
-                <button class="btn btn-danger" type="button">EN</button></li>
-                </ui>
+              
             </div>
               <div class="login">
               <ul class="navbar-nav" >
@@ -19,6 +12,7 @@
                     <li><a class="dropdown-item" href="/login">login</a></li>
                     <li><a class="dropdown-item" href="/registeruser">registerUser</a></li>
                     <li><a class="dropdown-item" href="/registercompany">registerCompany</a></li>
+                    <li><a class="dropdown-item" href="/">logout</a></li>
                   </ul>
                   </li>
                 
@@ -55,6 +49,6 @@
                               </ul>
                                       
                 </div>
-              </nav> 
+              </nav>  
     
            
