--- a/views/registerCompany.ejs
+++ b/views/registerCompany.ejs
@@ -68,6 +68,7 @@
   <button type="submit" class="btn btn-primary">RegisterCompany</button>
   
   </form>
+  <script> src ="js/registerCompany.js"</script>
 </body>
 
 </html>
