--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,31 +13,34 @@
     <section>
         <div class="form-box">
             <div class="form-value">
-                <form action="">
+                <form onsubmit=" return false;" id="form">
                     <h2>Login</h2>
                     <div class="inputbox">
                         <ion-icon name="mail-outline"></ion-icon>
-                        <input type="email" required>
-                        <label for="">Email</label>
+                        <input type="email" id="email" autocomplete="off" required>
+                        <label for="email">Email</label>
                     </div>
                     <div class="inputbox">
                         <ion-icon name="lock-closed-outline"></ion-icon>
-                        <input type="password" required>
-                        <label for="">Password</label>
+                        <input type="password" id="password" autocomplete="off" required>
+                        <label for="password">Password</label>
                     </div>
                     <div class="forget">
                         <label for=""><input type="checkbox">Remember Me  <a href="#">Forget Password</a></label>
 
                     </div>
-                    <button>Log in</button>
+                    <button type="submit">Log in</button>
                     <div class="register">
                         <t>Don't have a account <a href="/registeruser">RegisterUser</a><br>or &nbsp;<a href="/registercompany">RegisterCompany</a></p>
-                   
                     </div>
+                    <div class="alert alert-danger" role="alert"  id="error" style="display:none;"></div>
+                    <div class="alert alert-success" role="alert" id="success"  style="display:none;"></div>
+
                 </form>
             </div>
         </div>
     </section>
+    <script> src ="js/login.js"</script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
