--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -1,69 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>registerUser</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>registerUser</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script> -->
 </head>
+
 <body>
- 
+  <%- include('navbar') %>
+
   <div class="container">
-    <% if (locals.msg){ %>
-      <ul>
-        <li>
-          <%= msg %>
-        </li>
-      </ul>
-    <% } %>
-  
-    <p>{{msg}}</p>
-  
-  <form action="/auth/registerUser" method="POST">
-     <!-- Name input -->
-     <div class="row mb-3">
-      <label for="name" >Name</label>
-      <div class="col-sm-5">
-        <input type="text" class="form-control" id="name" name="name" placeholder="col-form-label">
-      </div>
-    </div>
-       <!-- Password input -->
-       <div class="row mb-3">
-        <label for="password" >Password</label>
+
+
+    <form onsubmit=" return false;" id="form">
+      <!-- Name input -->
+      <!-- <div class="row mb-3">
+        <label for="name">Name</label>
         <div class="col-sm-5">
-          <input type="Password" class="form-control" id="password" name="password" placeholder="col-form-label">
+          <input type="name" class="form-control" id="name" name="name" placeholder="col-form-label" autocomplete="off" required>
+        </div>
+      </div> -->
+
+      <!-- Password input -->
+      <div class="row mb-3">
+        <label for="password">Password</label>
+        <div class="col-sm-5">
+          <input type="password" class="form-control" id="password" name="password" placeholder="col-form-label" autocomplete="off" required>
         </div>
       </div>
-       <!-- currentpass input -->
-       <div class="row mb-3">
+
+
+      <!-- currentpass input -->
+      <!-- <div class="row mb-3">
         <label for="currentpass" class="col-sm-2 col-form-label">currentpass</label>
         <div class="col-sm-5">
-          <input type="currentpass" class="form-control" id="currentpass" name ="currentpass" placeholder="col-form-label">
+          <input type="currentpass" class="form-control" id="currentpass" name="currentpass"placeholder="col-form-label" autocomplete="off" required>
+        </div>
+      </div> -->
+
+      <!-- Email input -->
+      <div class="row mb-3">
+        <label for="email" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-5">
+          <input type="email" class="form-control" id="email" name="email" placeholder="col-form-label"autocomplete="off" required>
         </div>
       </div>
 
-     <!-- Email input -->
-     <div class="row mb-3">
-      <label for="email" class="col-sm-2 col-form-label">Email</label>
-      <div class="col-sm-5">
-        <input type="email" class="form-control" id="email" name="email" placeholder="col-form-label">
-      </div>
-    </div>
-
-       <!-- tell input -->
-       <div class="row mb-3">
+      <!-- tell input -->
+      <!-- <div class="row mb-3">
         <label for="colFormLabel" class="col-sm-2 col-form-label">tell</label>
         <div class="col-sm-5">
-          <input type="tell" class="form-control" id="tell" name="tell" placeholder="col-form-label">
+          <input type="tell" class="form-control" id="tell" name="tell" placeholder="col-form-label" autocomplete="off" required>
         </div>
-      </div>
-      <button type="submit" class="btn btn-primary">RegisterCompany</button>
-      </form>
-      </div>
+      </div> -->
+      <div class="alert alert-danger" role="alert"  id="error" style="display:none;"></div>
+      <div class="alert alert-success" role="alert" id="success"  style="display:none;"></div>
+      <button type="submit" class="btn btn-primary">Register</button>
+    </form>
+  </div>
+  <script> src ="js/register.js"</script>
 </body>
 
 </html>
