--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,47 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="chrome">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>login</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
+  <%- include('navbar') %>
     <section>
-        <div class="form-box">
-            <div class="form-value">
-                <form onsubmit=" return false;" id="form">
-                    <h2>Login</h2>
-                    <div class="inputbox">
-                        <ion-icon name="mail-outline"></ion-icon>
-                        <input type="email" id="email" autocomplete="off" required>
-                        <label for="email">Email</label>
-                    </div>
-                    <div class="inputbox">
-                        <ion-icon name="lock-closed-outline"></ion-icon>
-                        <input type="password" id="password" autocomplete="off" required>
-                        <label for="password">Password</label>
-                    </div>
-                    <div class="forget">
-                        <label for=""><input type="checkbox">Remember Me  <a href="#">Forget Password</a></label>
-
-                    </div>
-                    <button type="submit">Log in</button>
-                    <div class="register">
-                        <t>Don't have a account <a href="/registeruser">RegisterUser</a><br>or &nbsp;<a href="/registercompany">RegisterCompany</a></p>
-                    </div>
-                    <div class="alert alert-danger" role="alert"  id="error" style="display:none;"></div>
-                    <div class="alert alert-success" role="alert" id="success"  style="display:none;"></div>
-
-                </form>
+      <div class="form-box">
+        <div class="form-value">
+          <form onsubmit="submitLoginForm(event)">
+            <h2>Login</h2>
+            <div class="inputbox">
+              <ion-icon name="mail-outline"></ion-icon>
+              <input type="email" id="email" autocomplete="off" required>
+              <label for="email">Email</label>
             </div>
+            <div class="inputbox">
+              <ion-icon name="lock-closed-outline"></ion-icon>
+              <input type="password" id="password" autocomplete="off" required>
+              <label for="password">Password</label>
+            </div>
+            <div class="forget">
+              <label for=""><input type="checkbox">Remember Me <a href="#">Forget Password</a></label>
+
+            </div>
+            <button type="submit">Log in</button>
+            <div class="register">
+              <t>Don't have a account <a href="/registeruser">RegisterUser</a><br>or &nbsp;<a
+                  href="/registercompany">RegisterCompany</a></p>
+            </div>
+
+            <div id="error-message" class="alert alert-danger" role="alert" style="display:none;"></div>
+          </form>
         </div>
+      </div>
     </section>
-    <script> src ="js/login.js"</script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <script>
+      function submitLoginForm(event) {
+        event.preventDefault(); // Prevent page refresh on form submit
+
+        // Get data from the form
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+
+        // Send data to the server
+        axios.post('/api/login', { email, password })
+          .then(response => {
+            // Successful response
+            console.log(response.data);
+            window.location.href = '/'; // Redirect to the profile page
+
+          })
+          .catch(error => {
+            // Error response
+            const errorMessage = error.response.data;
+            document.getElementById('error-message').textContent = errorMessage;
+            document.getElementById('error-message').style.display = 'block';
+          });
+      }
+    </script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
