--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,54 +1,48 @@
-
-            <div class="pc">
-            <div class="language ">
-              
-              
-            </div>
-              <div class="login">
-              <ul class="navbar-nav" >
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle bg-light  "  data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">login</a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/login">login</a></li>
-                    <li><a class="dropdown-item" href="/registeruser">registerUser</a></li>
-                    <li><a class="dropdown-item" href="/registercompany">registerCompany</a></li>
-                    <li><a class="dropdown-item" href="/">logout</a></li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Jobjab</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mb-2 mb-lg-0">
+        <li class="nav-item me-auto">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item me-auto">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item me-auto">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+        <li class="nav-item dropdown me-auto ms-auto">
+          <% if (locals.status==="loggedIn" ) { %>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+            <%= locals.user.name %>
+            </a>
+            <% } else { %>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                login
+              </a>
+              <% } %>
+                <% if (locals.status==="loggedIn" ) { %> <!-- Access the 'status' variable from locals -->
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="/profile">Profile</a></li>
+                    <li><a class="dropdown-item" href="/logout">Logout</a></li>
                   </ul>
-                  </li>
-                
-            </ul>
-            </div>
-          </div>
-            
-            
-            
-            <nav class="navbar navbar-expand-md navbar-light bg-warning nav nav-pills">
-                
-                <div class="collapse navbar-collapse" >
-                  <ul class="navbar-nav flex-sm-fill bg-white">
-                    <li class="nav-item ">
-                      <a class="nav-link " href="/">Home</a>
-                    </li>
-                      </ul>
-                  <ul class="navbar-nav flex-sm-fill bg-primary">
-                    <li class="nav-item">
-                      <a class="nav-link" href="/registeruser">Urgent work</a>
-                    </li>
-                      </ul>
-
-                    
-                      <ul class="navbar-nav flex-sm-fill bg-white">
-                        <li class="nav-item">
-                          <a class="nav-link" href="/registercompany">region</a>
-                        </li>
-                          </ul>
-                          <ul class="navbar-nav flex-sm-fill bg-primary">
-                            <li class="nav-item">
-                              <a class="nav-link" href="/resume">resume</a>
-                            </li>
-                              </ul>
-                                      
-                </div>
-              </nav>  
-    
-           
+                  <% } else { %>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                      <!-- Comment: Displayed if the user is not logged in -->
+                      <li><a class="dropdown-item" href="/login">Login</a></li>
+                      <li><a class="dropdown-item" href="/registerUser">RegisterUser</a></li>
+                      <li><a class="dropdown-item" href="/registerCompany">RegisterCompany</a></li>
+                    </ul>
+                    <% } %>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
