--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -11,64 +11,38 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
-    <script src="js/bootstrap.min.js"></script> -->
+
 </head>
 
 <body>
-  <%- include('navbar') %>
+
 
   <div class="container">
 
 
-    <form onsubmit=" return false;" id="form">
-      <!-- Name input -->
-      <!-- <div class="row mb-3">
-        <label for="name">Name</label>
-        <div class="col-sm-5">
-          <input type="name" class="form-control" id="name" name="name" placeholder="col-form-label" autocomplete="off" required>
-        </div>
-      </div> -->
-       <!-- Email input -->
-       <div class="row mb-3">
-        <label for="email" class="col-sm-2 col-form-label">Email</label>
-        <div class="col-sm-5">
-          <input type="email" class="form-control" id="email" name="email" placeholder="col-form-label"autocomplete="off" required>
-        </div>
+    <form action="/api/register" method="post">
+      <div class="data">
+        <label for="name">UserName</label>
+        <input type="text" name="name" id="name" />
       </div>
-
-
-      <!-- Password input -->
-      <div class="row mb-3">
+      <div class="data">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" />
+      </div>
+      <div class="data">
         <label for="password">Password</label>
-        <div class="col-sm-5">
-          <input type="password" class="form-control" id="password" name="password" placeholder="col-form-label" autocomplete="off" required>
-        </div>
+        <input type="password" name="password" id="password" />
       </div>
-
-
-      <!-- currentpass input -->
-      <!-- <div class="row mb-3">
-        <label for="currentpass" class="col-sm-2 col-form-label">currentpass</label>
-        <div class="col-sm-5">
-          <input type="currentpass" class="form-control" id="currentpass" name="currentpass"placeholder="col-form-label" autocomplete="off" required>
-        </div>
-      </div> -->
-
-     
-      <!-- tell input -->
-      <!-- <div class="row mb-3">
-        <label for="colFormLabel" class="col-sm-2 col-form-label">tell</label>
-        <div class="col-sm-5">
-          <input type="tell" class="form-control" id="tell" name="tell" placeholder="col-form-label" autocomplete="off" required>
-        </div>
-      </div> -->
-      <div class="alert alert-danger" role="alert"  id="error" style="display:none;"></div>
-      <div class="alert alert-success" role="alert" id="success"  style="display:none;"></div>
+      <div class="data">
+        <label for="confirm_password">Confirm Password</label>
+        <input type="password" name="confirm_password" id="password" />
+      </div>
+      <div class="alert alert-danger" role="alert" id="error" style="display:none;"></div>
+      <div class="alert alert-success" role="alert" id="success" style="display:none;"></div>
       <button type="submit" class="btn btn-primary">Register</button>
     </form>
   </div>
-  <script> src ="js/register.js"</script>
+
 </body>
 
 </html>
