--- a/views/login.ejs
+++ b/views/login.ejs
@@ -61,7 +61,7 @@
           .then(response => {
             // Successful response
             console.log(response.data);
-            window.location.href = '/'; // Redirect to the profile page
+            // window.location.href = '/'; // Redirect to the profile page
 
           })
           .catch(error => {
