--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -20,7 +20,7 @@
   <div class="container">
 
 
-    <form action="/api/register" method="post">
+    <form action="/api/registeruser" method="post">
       <div class="data">
         <label for="name">UserName</label>
         <input type="text" name="name" id="name" />
