--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,13 @@
 body{
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Kanit', sans-serif;
 }
 
 *{
   margin: 0;
   padding: 0;
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Kanit', sans-serif;
 }
-section{
+.sectionforlogin{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,6 +18,11 @@ section{
   background-position: center;
   background-size: cover;
 }
+
+
+
+
+
 .form-box{
   position: relative;
   width: 400px;
@@ -42,6 +47,12 @@ h2{
   width: 310px;
   border-bottom: 2px solid #fff;
 }
+
+
+
+
+
+
 .inputbox label{
   position: absolute;
   top: 50%;
@@ -54,7 +65,7 @@ h2{
 }
 input:focus ~ label,
 input:valid ~ label{
-top: -5px;
+  top: -5px;
 }
 .inputbox input {
   width: 100%;
@@ -83,7 +94,7 @@ top: -5px;
 
 .forget label input{
   margin-right: 3px;
-
+  
 }
 .forget label a{
   color: #fff;
@@ -117,3 +128,78 @@ button{
 .register p a:hover{
   text-decoration: underline;
 }
+
+
+
+.sectionregister{
+  align-items: center;
+  /* background: url('/image/wallpaper_login.jpg')no-repeat; */
+  background-color: black;
+  background-position: center;
+  background-size: cover;
+  min-height: 100vh;
+  width: 100%;
+}
+.form-box-regis{
+  position:relative;
+  width: 400px;
+  height: 1000px;
+  background: transparent;
+  border: 2px solid rgba(240, 16, 16, 0.5);
+  border-radius: 20px;
+  backdrop-filter: blur(15px);
+  background-color: rgb(9, 212, 175);
+  display: flex;
+  justify-content: center;
+  align-items:center;
+}
+
+.inputbox-regis{
+  position: relative;
+  margin: 30px 0;
+  width: 310px;
+  border-bottom: 2px solid #fff;
+ 
+
+}
+
+
+
+.inputbox-regis label{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  color: #fff;
+  font-size: 1em;
+  pointer-events: none;
+  transition: .5s;
+}
+
+
+.inputbox-regis input {
+  width: 100%;
+  height: 50px;
+  background:none;
+  border: none;
+  outline: none;
+  font-size: 1em;
+  padding:0 35px 0 5px;
+  color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
