end login start profile

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -22,7 +22,7 @@
             <% if (status === "loggedIn") { %> <!-- Check if the status is "loggedIn" -->
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
-            <%= member.name %> <!-- Access the email property of the member -->
+            <%= member.username %> <!-- Access the email property of the member -->
             </a>
           <% } else { %>
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-bs-toggle="dropdown"
