--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,16 +15,18 @@
     <section class="sectionregister">
             <div class="form-box-regis">
                 <div class="form-value">
-                    <form action="/profile" method="get">
+                    <form action="/id" method="post">
                         <div class="inputbox-regis">
-                            
+                          
                             <input type="email" id="email" autocomplete="off" required>
                             <label for="email">Email</label>
                           </div>
                           <div class="inputbox-regis">
+
                             <ion-icon name="mail-outline"></ion-icon>
-                            <input type="email" id="email" autocomplete="off" required>
-                            <label for="email">Email</label>
+                            
+                            <input type="text" id="username" autocomplete="off" required>
+                            <label for="username">username</label>
                           </div>
                           <div class="inputbox-regis">
                             <ion-icon name="mail-outline"></ion-icon>
