--- a/views/registerCompany.ejs
+++ b/views/registerCompany.ejs
@@ -11,12 +11,12 @@
     <script src="js/bootstrap.min.js"></script> -->
 </head>
 <body>
-  <%- include('navbar') %>
-  <form action="/api/registercompany" method="post">
+  
+  <form action="/company/registercompany" method="post">
    <!-- Name input -->
    <div  class="data">
     <label  for="name">name</label>
-    <input type="text"  name ="name" id="name"  />
+    <input type="text"  name ="username" id="name"  />
     
   </div>
    <!-- Password input -->
