--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -20,10 +20,10 @@
   <div class="container">
 
 
-    <form action="/api/registeruser" method="post">
+    <form action="/user/registeruser" method="post">
       <div class="data">
         <label for="name">UserName</label>
-        <input type="text" name="name" id="name" />
+        <input type="text" name="username" id="name" />
       </div>
       <div class="data">
         <label for="email">Email</label>
