--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -32,7 +32,7 @@
           <% } %>
           <% if (status === "loggedIn") { %> <!-- Check if the status is "loggedIn" -->
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/profile">Profile</a></li>
+              <li><a class="dropdown-item" href="/user/:id/profile">Profile</a></li>
               <li><a class="dropdown-item" href="/logout">Logout</a></li>
             </ul>
           <% } else { %>
