--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -22,8 +22,8 @@
 
     <form action="/user/registeruser" method="post">
       <div class="data">
-        <label for="name">UserName</label>
-        <input type="text" name="username" id="name" />
+        <label for="username">UserName</label>
+        <input type="text" name="username" id="username" />
       </div>
       <div class="data">
         <label for="email">Email</label>
