--- a/views/addjob.ejs
+++ b/views/addjob.ejs
@@ -29,55 +29,55 @@
 
 
 
-      <!-- <div class="inputbox-regis">
-        <input type="text" id="detail_work"  name="detail_work" value="<%= job.detail_work %>" />
+      <div class="inputbox-regis">
+        <input type="text" id="detail_work"  name="detail_work"  />
         <label for="detail_work">detail_work</label>
       </div>
       <div class="inputbox-regis">
        <ion-icon name="mail-outline"></ion-icon>
-       <input type="text" id="experience" name= "experience"value="<%= job.experience %>" />
+       <input type="text" id="experience" name= "experience" />
        <label for="experience">experience</label>
         </div>
 
 
 
         <div class="inputbox-regis">
-          <input type="text" id="gender"  name="gender" value="<%= job.gender %>" />
+          <input type="text" id="gender"  name="gender"  />
           <label for="gender">gender</label>
         </div>
         <div class="inputbox-regis">
          <ion-icon name="mail-outline"></ion-icon>
-         <input type="text" id="education" name= "education"value="<%= job.education %>" />
+         <input type="text" id="education" name= "education" />
          <label for="education">education</label>
           </div>
 
           <div class="inputbox-regis">
-            <input type="text" id="welfare"  name="welfare" value="<%= job.welfare %>" />
+            <input type="text" id="welfare"  name="welfare"  />
             <label for="welfare">welfare</label>
           </div>
         
           <div class="inputbox-regis">
-            <input type="text" id="salary"  name="salary" value="<%= job.salary %>" />
+            <input type="text" id="salary"  name="salary"  />
             <label for="salary">salary</label>
           </div>
           <div class="inputbox-regis">
            <ion-icon name="mail-outline"></ion-icon>
-           <input type="text" id="workday" name= "workday"value="<%= job.workday %>" />
+           <input type="text" id="workday" name= "workday" />
            <label for="workday">workday</label>
             </div>
   
             <div class="inputbox-regis">
-              <input type="text" id="day_off"  name="day_off" value="<%= job.day_off %>" />
+              <input type="text" id="day_off"  name="day_off"  />
               <label for="day_off">day_off</label>
             </div>
 
 
             <div class="inputbox-regis">
                 <ion-icon name="mail-outline"></ion-icon>
-                <input type="text" id="deadline_offer" name= "deadline_offer"value="<%= job.deadline_offer %>" />
+                <input type="text" id="deadline_offer" name= "deadline_offer"/>
                 <label for="deadline_offer">deadline_offer</label>
                  </div>
-        -->
+       
             
         <button type="submit" class="btn btn-wanning">save</button>
     
