--- a/views/jobgetall.ejs
+++ b/views/jobgetall.ejs
@@ -10,21 +10,21 @@
    
 </head>
 <table>
-<tbody>
+<body>
 
 <% job.forEach((job) => {%>
     <tr>
-        <td><><%= job.name_job%></td>
-        <td><><%= job.role%></td>
-        <td><><%= job.detail_work%></td>
-        <td><><%= job.experience%></td>
-        <td><><%= job.gender%></td>
-        <td><><%= job.education%></td>
-        <td><><%= job.welfare%></td>
-        <td><><%= job.salary%></td>
+        <td><%= job.name_job%></td>
+        <td><%= job.role%></td>
+        <td><%= job.detail_work%></td>
+        <td><%= job.experience%></td>
+        <td><%= job.gender%></td>
+        <td><%= job.education%></td>
+        <td><%= job.welfare%></td>
+        <td><%= job.salary%></td>
         </tr>
         <%})%>
             
-</tbody>
+</body>
 </table>
 </html>
