login 3 actor success

--- a/views/forgotpassword.ejs
+++ b/views/forgotpassword.ejs
@@ -22,11 +22,11 @@
                         <input type="email" id="email"  name="email" />
                         <label for="email">email</label>
                       </div>
-                      <div class="inputbox-regis">
+                      <!-- <div class="inputbox-regis">
                        <ion-icon name="mail-outline"></ion-icon>
                        <input type="password" id="password" name= "password"/>
                        <label for="password">password</label>
-                        </div>
+                        </div> -->
                           <!-- <div class="inputbox-regis">
                             <ion-icon name="mail-outline"></ion-icon>
                             <input type="password" id="password" autocomplete="off" required>
