--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -19,60 +19,54 @@
         
         <li class="nav-item dropdown me-auto ms-auto">
           <li class="nav-item dropdown me-auto ms-auto">
-            <% if (status === "loggedIn") { %> <!-- Check if the status is "loggedIn" -->
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-            <%= member.username %> <!-- Access the email property of the member -->
-            </a>
-          <% }
-          
-          
-          else { %>
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Login
-            </a>
-          <% } %>
-          <% if (status == "loggedIn" && company.id_company!=undefined) { %> <!-- Check if the status is "loggedIn" -->
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <!-- <li><a class="dropdown-item" href="/user/profile/<%= member.id_member %>">Profile</a></li>
-              <li><a class="dropdown-item" href="/user/resume/<%= users.id_user %>">Resume</a></li> -->
-              <li><a class="dropdown-item" href="/company/profile/<%= member.id_member %>">Profile</a></li>
-              <li><a class="dropdown-item" href="/company/addjob_company/<%= company.id_company %>">Job</a></li>
-              <li><a class="dropdown-item" href="/company/getjoball/<%= company.id_company %>">historysumitjob</a></li>
-              <li><a class="dropdown-item" href="/forgetpassword/<%= company.id_company %>">forget</a></li>
-              <li><a class="dropdown-item" href="/logout">Logout</a></li>
-            </ul>
-          <% } 
+            <% if (status ==="loggedIn") { %> <!-- Check if the status is "loggedIn" -->
+              <% if (user) { %> 
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><%= user.username %> <!-- Access the email property of the member --></a>
+              <% } else if(company){ %>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"aria-expanded="false"><%= company.username %> <!-- Access the email property of the member --></a>
+                  <% } else { %>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"aria-expanded="false"><%= admin.username %> <!-- Access the email property of the member --></a>
+                      <% } %>
 
-           if (status == "loggedIn" && user.id_user!=undefined) { %> <!-- Check if the status is "loggedIn" -->
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/user/profile/<%= member.id_member %>">Profile</a></li>
-              <li><a class="dropdown-item" href="/user/addresume/<%= users.id_user %>">Resume</a></li>
-              <li><a class="dropdown-item" href="/user/updateresume/<%= users.id_user %>">historysumitjob</a></li>
-              <!-- <li><a class="dropdown-item" href="/company/profile/<%= member.id_member %>">Profile</a></li>
-              <li><a class="dropdown-item" href="/company/job_company/<%= company.id_company %>">Job</a></li> -->
-              <li><a class="dropdown-item" href="/forgetpassword/<%= users.id_user  %>">forget</a></li>
-              <li><a class="dropdown-item" href="/logout">Logout</a></li>
-            </ul>
-          <% } 
-          
-          
-          
-          
-          
-          
-          
-          
-          
-          else { %>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-              <!-- Comment: Displayed if the user is not logged in -->
-              <li><a class="dropdown-item" href="/login">Login</a></li>
-              <li><a class="dropdown-item" href="/registerUser">RegisterUser</a></li>
-              <li><a class="dropdown-item" href="/registerCompany">RegisterCompany</a></li>
-            </ul>
-          <% } %>
+
+                <% if (user) { %> <!-- Check if the status is "loggedIn" -->
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="/user/profile/<%= user.id_user %>">Profile</a></li>
+                      <li><a class="dropdown-item" href="/user/addresume/<%= users.id_user %>">Resume</a></li>
+                      <li><a class="dropdown-item" href="/user/updateresume/<%= users.id_user %>">historysumitjob</a></li>
+                
+                      <li><a class="dropdown-item" href="/forgetpassword/<%= users.id_user  %>">forget</a></li>
+                      <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                    </ul>
+                <% } else if(company){ %>
+                      <!-- Check if the status is "loggedIn" -->
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">                      
+                        <li><a class="dropdown-item" href="/company/profile/<%= company.id_company %>">Profile</a></li>
+                        <li><a class="dropdown-item" href="/company/addjob_company/<%= company.id_company %>">Job</a></li>
+                        <li><a class="dropdown-item" href="/company/getjoball/<%= company.id_company %>">historysumitjob</a></li>
+                        <li><a class="dropdown-item" href="/forgetpassword/<%= company.id_company %>">forget</a></li>
+                        <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                      </ul>
+                    <% } else if(admin){ %>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">       
+                       
+                        <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                      </ul>
+                      <% } %>
+
+
+            <% } else { %>
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Login
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                  <!-- Comment: Displayed if the user is not logged in -->
+                  <li><a class="dropdown-item" href="/login">Login</a></li>
+                  <li><a class="dropdown-item" href="/registerUser">RegisterUser</a></li>
+                  <li><a class="dropdown-item" href="/registerCompany">RegisterCompany</a></li>
+                  <li><a class="dropdown-item" href="/registerAdmin">RegisterAdmin</a></li>
+                  </ul>
+                <% } %>
         </li>
       </ul>
     </div>
